# perceptronModel

./: CMakeLists.txt  README.md  config.h.in  main.cpp
src/: config.h  get_data_set.hpp  perceptron_model.hpp
